# wgpu-renderer

./: .gitignore  Cargo.toml  TODO.md  build.rs
shaders/: common.wgsl  hdr.wgsl  light.wgsl  standard.wgsl  triangle.wgsl
src/: camera.rs  console.rs  main.rs  model.rs  pipeline.rs  texture.rs  util.rs
src/camera/: controller.rs  mod.rs  projection.rs  uniform.rs
src/light/: mod.rs  uniform.rs
src/math/: mat.rs  mod.rs  vec.rs
src/model/: mod.rs  resource.rs
src/terrain/: mod.rs
