[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
image = "0.24.7"
pollster = { version = "0.3.0", features = ["macro"] }
wgpu = "0.18.0"
winit = { version = "0.29.6", features = ["rwh_05"] }
