[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2021"

[build]
path = "build.rs"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = { git = "https://github.com/rustgd/cgmath", features = ["bytemuck"] }
glyphon = { git = "https://github.com/grovesNL/glyphon"}
image = "0.24.7"
pollster = { version = "0.3.0", features = ["macro"] }
thiserror = "1.0.56"
tobj = { version = "4.0.0", features = ["async"] }
wgpu = { version = "0.18.0", features = ["trace"] }
winit = { version = "0.29.6", features = ["rwh_05"] }

[build-dependencies]
anyhow = "1.0.77"
fs_extra = "1.3.0"
glob = "0.3.1"
